--- a/pages/projects/condations.html
+++ b/pages/projects/condations.html
@@ -62,8 +62,10 @@
     <tbody>
       <tr>
         <td>
-          <input id="numbering" type="text" placeholder=""
-            style="border: none; background-color: transparent; color: black" />
+         
+    <input id="numbering" readonly type="text" placeholder=""
+  style="outline: none; border: none; background-color: transparent; color: black;" />
+
         </td>
         <td>
           <textarea id="pandCondationText" placeholder=""
