--- a/pages/projects/pands.html
+++ b/pages/projects/pands.html
@@ -61,9 +61,10 @@
         <tbody>
             <tr>
                 <td>
-                    <input id="numbering" type="text" placeholder=""
-                        style="border: none; background-color: transparent; color: black" />
-                </td>
+                   <input id="numbering" readonly type="text" placeholder=""
+  style="outline: none; border: none; background-color: transparent; color: black;" />
+
+</td>
                 <td>
                     <input id="pandText" type="text" placeholder=""
                         style="border: none; background-color: transparent; color: black" />
